# OcrGather

./: LICENSE  README.md  pyproject.toml  requirement.txt  setup.py
OcrGather/: __init__.py  ocr.py  ocr_all.py
OcrGather/clients/: aliyun_ocr.py  baidu_ocr.py  tencent_ocr.py  textin_ocr.py  utils.py  xfyun_ocr.py  youdao_ocr.py
