[project]
name = "OcrGather"
version = "0.1.0"
description = "Some third-party OCR services are encapsulated"
authors = [
    {name = "centyuan", email = "centyuan@outlook.com"},
]
dependencies = [
    "twine>=4.0.2",
    "alibabacloud-credentials>=0.3.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
